@@ -11,6 +11,10 @@ the rules for this file:
 
 05/18/04 russ
 
+	* added warm starting to the QuickStep solver
+
+05/18/04 russ
+
 	* added the QuickStep solver
 	
 	* added contact parameter functions.
